--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -10,7 +10,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: #4d9370;
-    padding: 35px 20px;
+    padding: 15px 20px;
     color: white;
     font-family: 'Cormorant Garamond', serif;
 }
@@ -43,7 +43,7 @@ nav a {
 }
 
 .banner {
-    background: url('imagens/banner.webp') no-repeat center center/cover;
+    background: url('../imagens/banner.webp') no-repeat center center/cover;
     color: white;
     text-align: center;
     padding: 250px 20px;
