--- a/src/main/resources/static/css/sucessocadastro.css
+++ b/src/main/resources/static/css/sucessocadastro.css
@@ -7,7 +7,7 @@
 
 
 body {
-    background-image:url(images/joiia.jpg); 
+    background-image:url(imagens/joiia.jpg); 
     color: #4d9370; 
     display: flex;
     flex-direction: column;
